fix up some css, make h4's more visible

--- a/theme/static/css/bootstrap.css
+++ b/theme/static/css/bootstrap.css
@@ -399,7 +399,7 @@ h6,
 .h5,
 .h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.1;
   color: inherit;
 }
